# tetcore-node-windows

./: Cargo.toml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: build-push-template.yml
doc/: rust-setup.md
nobles/template/: Cargo.toml
nobles/template/src/: lib.rs  mock.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  multiaddress.rs
scripts/: docker_run.sh
