[package]
authors = ['Tetcore DevHub <https://github.com/tetcore-developer-hub>']
build = 'build.rs'
description = 'A fresh FABRIC-based Tetcore node, ready for hacking.'
edition = '2018'
homepage = 'https://tetcore.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/tetcore-developer-hub/tetcore-node-template/'
version = '2.0.1'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
tetcore-build-script-utils = '2.0.1'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
node-template-runtime = { path = '../runtime', version = '2.0.1' }

# Tetcore dependencies
fabric-benchmarking = '2.0.0'
fabric-benchmarking-cli = '2.0.0'
noble-transaction-payment-rpc = '2.0.0'
tc-basic-authorship = '0.8.0'
tc-cli = { features = ['wasmtime'], version = '0.8.0' }
tc-client-api = '2.0.0'
tc-consensus = '0.8.0'
tc-consensus-aura = '0.8.0'
tc-executor = { features = ['wasmtime'], version = '0.8.0' }
tc-finality-grandpa = '0.8.0'
tc-rpc = '2.0.0'
tc-rpc-api = '0.8.0'
tc-service = { features = ['wasmtime'], version = '0.8.0' }
tc-transaction-pool = '2.0.1'
tp-api = '2.0.2'
tp-block-builder = '2.0.2'
tp-blockchain = '2.0.2'
tp-consensus = '0.8.2'
tp-consensus-aura = '0.8.2'
tet-core = '2.0.2'
tp-finality-grandpa = '2.0.2'
tp-inherents = '2.0.2'
tp-runtime = '2.0.2'
tp-transaction-pool = '2.0.2'
tetcore-fabric-rpc-system = '2.0.1'

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
