[package]
name = "node-template"
version = "2.0.0"
authors = ["Anonymous"]
description = "A new fabric-based Tetcore node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
structopt = "0.3.8"

tc-cli = { version = "0.8.0", features = ["wasmtime"] }
tet-core = { version = "2.0.2" }
tc-executor = { version = "0.8.0", features = ["wasmtime"] }
tc-service = { version = "0.8.0", features = ["wasmtime"] }
tc-telemetry = { version = "2.0.0" }
tc-keystore = { version = "2.0.0" }
tp-inherents = { version = "2.0.2" }
tc-transaction-pool = { version = "2.0.0" }
tp-transaction-pool = { version = "2.0.2" }
tc-consensus-aura = { version = "0.8.0" }
tp-consensus-aura = { version = "0.8.2" }
tp-consensus = { version = "0.8.2" }
tc-consensus = { version = "0.8.0" }
tc-finality-grandpa = { version = "0.8.0" }
tp-finality-grandpa = { version = "2.0.2" }
tc-client-api = { version = "2.0.0" }
tp-runtime = { version = "2.0.2" }

# These dependencies are used for the node template's RPCs
tetsy-jsonrpc-core = "15.1.0"
tc-rpc = { version = "2.0.0" }
tp-api = { version = "2.0.2" }
tc-rpc-api = { version = "0.8.0" }
tp-blockchain = { version = "2.0.2" }
tp-block-builder = { version = "2.0.2" }
tc-basic-authorship = { version = "0.8.0" }
tetcore-fabric-rpc-system = { version = "2.0.0" }
noble-transaction-payment-rpc = { version = "2.0.0" }

# These dependencies are used for runtime benchmarking
fabric-benchmarking = { version = "2.0.0" }
fabric-benchmarking-cli = { version = "2.0.1" }

node-template-runtime = { version = "2.0.0" }

[build-dependencies]
build-script-utils = { version = "2.0.1" }

[features]
default = []
runtime-benchmarks = [
	"node-template-runtime/runtime-benchmarks",
]
