[package]
authors = ['Tetcore DevHub <https://github.com/tetcore-developer-hub>']
edition = '2018'
homepage = 'https://tetcore.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/tetcore-developer-hub/tetcore-node-template/'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
tetcore-wasm-builder = '3.0.0'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# local dependencies
noble-template = { path = '../nobles/template', default-features = false, version = '2.0.1' }

# Tetcore dependencies
fabric-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
fabric-executive = { default-features = false, version = '2.0.0' }
fabric-support = { default-features = false, version = '2.0.0' }
fabric-system = { default-features = false, version = '2.0.0' }
fabric-system-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
fabric-system-rpc-runtime-api = { default-features = false, version = '2.0.0' }
noble-aura = { default-features = false, version = '2.0.1' }
noble-balances = { default-features = false, version = '2.0.1' }
noble-grandpa = { default-features = false, version = '2.0.0' }
noble-randomness-collective-flip = { default-features = false, version = '2.0.0' }
noble-sudo = { default-features = false, version = '2.0.0' }
noble-timestamp = { default-features = false, version = '2.0.0' }
noble-transaction-payment = { default-features = false, version = '2.0.0' }
noble-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.0' }
tp-api = { default-features = false, version = '2.0.2' }
tp-block-builder = { default-features = false, version = '2.0.2' }
tp-consensus-aura = { default-features = false, version = '0.8.2' }
tet-core = { default-features = false, version = '2.0.2' }
tp-inherents = { default-features = false, version = '2.0.2' }
tp-offchain = { default-features = false, version = '2.0.2' }
tp-runtime = { default-features = false, version = '2.0.2' }
tp-session = { default-features = false, version = '2.0.2' }
tetcore-std = { default-features = false, version = '2.0.2' }
tp-transaction-pool = { default-features = false, version = '2.0.2' }
tp-version = { default-features = false, version = '2.0.2' }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'fabric-benchmarking',
    'fabric-support/runtime-benchmarks',
    'fabric-system-benchmarking',
    'fabric-system/runtime-benchmarks',
    'noble-balances/runtime-benchmarks',
    'noble-timestamp/runtime-benchmarks',
    'tp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'fabric-executive/std',
    'fabric-support/std',
    'fabric-system/std',
    'fabric-system-rpc-runtime-api/std',
    'noble-aura/std',
    'noble-balances/std',
    'noble-grandpa/std',
    'noble-randomness-collective-flip/std',
    'noble-sudo/std',
    'noble-template/std',
    'noble-timestamp/std',
    'noble-transaction-payment/std',
    'noble-transaction-payment-rpc-runtime-api/std',
    'tp-api/std',
    'tp-block-builder/std',
    'tp-consensus-aura/std',
    'tet-core/std',
    'tp-inherents/std',
    'tp-offchain/std',
    'tp-runtime/std',
    'tp-session/std',
    'tetcore-std/std',
    'tp-transaction-pool/std',
    'tp-version/std',
]
