[package]
name = "node-template-runtime"
version = "2.0.0"
authors = ["Anonymous"]
description = "Tetcore node template runtime"
edition = "2018"
license = "Unlicense"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "tetsy-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }

noble-aura = { version = "2.0.1", default-features = false }
noble-balances = { version = "2.0.1", default-features = false }
fabric-support = { version = "2.0.0", default-features = false }
noble-grandpa = { version = "2.0.0", default-features = false }
noble-randomness-collective-flip = { version = "2.0.0", default-features = false }
noble-sudo = { version = "2.0.0", default-features = false }
fabric-system = { version = "2.0.0", default-features = false }
noble-timestamp = { version = "2.0.0", default-features = false }
noble-transaction-payment = { version = "2.0.0", default-features = false }
fabric-executive = { version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
tp-api = { version = "2.0.2", default-features = false }
tp-block-builder = { default-features = false, version = "2.0.2"}
tp-consensus-aura = { version = "0.8.2", default-features = false }
tet-core = { version = "2.0.2", default-features = false }
tp-inherents = { default-features = false, version = "2.0.2"}
tp-offchain = { version = "2.0.2", default-features = false }
tp-runtime = { version = "2.0.2", default-features = false }
tp-session = { version = "2.0.2", default-features = false }
tetcore-std = { version = "2.0.2", default-features = false }
tp-transaction-pool = { version = "2.0.2", default-features = false }
tp-version = { version = "2.0.2", default-features = false }

# Used for the node template's RPCs
fabric-system-rpc-runtime-api = { version = "2.0.0", default-features = false }
noble-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false }

# Used for runtime benchmarking
fabric-benchmarking = { version = "2.0.0", default-features = false, optional = true }
fabric-system-benchmarking = { version = "2.0.0", default-features = false, optional = true }
hex-literal = { version = "0.3.1", optional = true }

template = { version = "2.0.0", default-features = false, package = "noble-template" }

[build-dependencies]
wasm-builder = { version = "3.0.1" }

[features]
default = ["std"]
std = [
	"codec/std",
	"fabric-executive/std",
	"fabric-support/std",
	"noble-aura/std",
	"noble-balances/std",
	"noble-grandpa/std",
	"noble-randomness-collective-flip/std",
	"noble-sudo/std",
	"noble-timestamp/std",
	"noble-transaction-payment/std",
	"noble-transaction-payment-rpc-runtime-api/std",
	"serde",
	"tp-api/std",
	"tp-block-builder/std",
	"tp-consensus-aura/std",
	"tet-core/std",
	"tp-inherents/std",
	"tp-offchain/std",
	"tp-runtime/std",
	"tp-session/std",
	"tetcore-std/std",
	"tp-transaction-pool/std",
	"tp-version/std",
	"fabric-system/std",
	"fabric-system-rpc-runtime-api/std",
	"template/std",
]
runtime-benchmarks = [
	"tp-runtime/runtime-benchmarks",
	"fabric-benchmarking",
	"fabric-support/runtime-benchmarks",
	"fabric-system-benchmarking",
	"hex-literal",
	"fabric-system/runtime-benchmarks",
	"noble-balances/runtime-benchmarks",
	"noble-timestamp/runtime-benchmarks",
]
