[package]
authors = ['Anonymous']
edition = '2018'
name = 'noble-template'
version = "2.0.1"
license = "Unlicense"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetcore"
description = "FABRIC noble template for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "tetsy-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }

[dev-dependencies]
serde = { version = "1.0.101" }

[dependencies.fabric-support]
default-features = false
version = "2.0.0"

[dependencies.fabric-system]
default-features = false
version = "2.0.0"

[dev-dependencies.tet-core]
default-features = false
version = "2.0.2"

[dev-dependencies.tet-io]
default-features = false
version = "2.0.2"

[dev-dependencies.tp-runtime]
default-features = false
version = "2.0.2"

[features]
default = ['std']
std = [
	'codec/std',
	'fabric-support/std',
	'fabric-system/std'
]
